fix filter query and tests